# kusanagi-sdk-python

./: .coveragerc  .flake8  .gitignore  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  mypy.ini  pylama.ini  pylintrc  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/sdk/: kusanagi.rst  kusanagi.sdk.http.rst  kusanagi.sdk.rst  kusanagi.sdk.schema.rst
kusanagi/: __init__.py  errors.py  json.py  logging.py  middleware.py  payload.py  schema.py  serialization.py  server.py  service.py  urn.py  utils.py  versions.py
kusanagi/sdk/: __init__.py  action.py  actiondata.py  api.py  base.py  callee.py  caller.py  component.py  error.py  file.py  link.py  middleware.py  param.py  relation.py  request.py  response.py  runner.py  service.py  servicedata.py  transaction.py  transport.py
kusanagi/sdk/http/: request.py  response.py
kusanagi/sdk/lib/: __init__.py  asynchronous.py  call.py  cli.py  datatypes.py  error.py  events.py  formatting.py  json.py  logging.py  msgpack.py  server.py  singleton.py  state.py  version.py
kusanagi/sdk/lib/payload/: __init__.py  (+13 more)
kusanagi/sdk/schema/: action.py  error.py  file.py  param.py  service.py
kusanagi/sdk/transport/: __init__.py  call.py  data.py  error.py  link.py  relation.py  transaction.py
tests/: conftest.py  test_action.py  test_actiondata.py  test_api.py  test_callee.py  test_caller.py  test_component.py  test_error.py  test_errors.py  test_file.py  test_json.py  test_lib_asynchronous.py  test_lib_call.py  test_lib_cli.py  test_lib_events.py  test_lib_formatting.py  test_lib_json.py  test_lib_logging.py  test_lib_msgpack.py  test_lib_payload.py  test_lib_payload_action.py  test_lib_payload_command.py  test_lib_payload_error.py  test_lib_payload_mapping.py  test_lib_payload_reply.py  test_lib_payload_transport.py  test_lib_payload_utils.py  test_lib_server.py  test_lib_singleton.py  test_lib_version.py  test_link.py  test_logging.py  test_middleware.py  test_param.py  test_payload.py  test_relation.py  test_request.py  test_response.py  test_schema.py  test_serialization.py  (+8 more)
tests/data/: foo.json  schema-param.json  transport.json
tests/sdk/: test_action.py  test_base.py  test_component.py  test_file.py  test_middleware.py  test_param.py  test_request.py  test_response.py  test_runner.py  test_service.py  test_transport.py
tests/sdk/http/: test_http_request.py  test_http_response.py
tests/sdk/schema/: test_schema_action.py  test_schema_file.py  test_schema_param.py  test_schema_service.py
