[tool.poetry]
name = "kusanagi-sdk-python"
version = "5.0.0"
description = "Python SDK for the KUSANAGI™ framework"
authors = ["Jeronimo Albi <jeronimo.albi@gmail.com>"]
license = "MIT"
homepage = "http://kusanagi.io/"
packages = [
    { include = "kusanagi" },
    { include = "kusanagi/**/*.py" },
]
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: POSIX :: Linux',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Networking',
]
include = [
    "CHANGELOG.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">= 3.9"
pyzmq = "^22.3.0"
msgpack = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-mypy = "^0.9.1"
pylint = "^2.12.2"
pylama = "^8.3.7"
coverage = "^6.3.2"
mypy = "^0.931"
isort = "^5.7.0"
flake8 = "^4.0.1"
tox = "^3.24.5"

[tool.poetry.urls]
"Releases" = "https://github.com/kusanagi/kusanagi-sdk-python/releases"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
